--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/moment": "^2.13.0",
+    "bootstrap": "^4.0.0-beta.3",
     "core-js": "^2.4.1",
+    "jquery": "^3.3.1",
+    "moment": "^2.22.0",
     "rxjs": "^5.5.6",
+    "tether": "^1.4.3",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
